--- a/app/globals.css
+++ b/app/globals.css
@@ -76,10 +76,17 @@
     }
   
   }
+
     .auth {
       @apply flex items-center justify-center min-h-screen w-full bg-purple-100;
     }
-                @layer utilities {
+    .root{
+      @apply flex min-h-screen w-full flex-col bg-white lg:flex-row;
+    }
+    .root-container{
+      @apply mt-16 flex-1 overflow-auto py-8 lg:mt-0 lg:max-h-screen lg:py-10
+    }
+    @layer utilities {
         
                   /* ===== UTILITIES */
                   .wrapper {
